# PTUD_Da-nen-tang

./: .gitignore  ADMIN_GUIDE.md  BACKEND_DESIGN.md  BACKEND_GUIDE.md  QUICKSTART.md  README.md  database_schema.puml  docker-compose.yml
backend/: .env  .env.example  Dockerfile  alembic.ini  environment.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 07d18eb740e3_update_food_models.py  26a9a495ec51_create_recipes_table.py  28effbada5ff_change_model_for_api_phase_2.py  a88727c026d7_add_api_spec_user_fields.py  af3e88aedcc0_create_meal_plans_table.py  b5c7a5cf6c3c_add_is_active_to_foods.py  d1a499f2ff3e_add_unit_name_and_category_name_to_foods.py  e3e0e9e26f90_initial_migration.py
backend/app/: main.py
backend/app/api/: __init__.py  admin.py  analytics.py  auth.py  category.py  food.py  fridge.py  group.py  meal_plans.py  recipes.py  shopping.py  unit.py  users.py
backend/app/core/: config.py  database.py  deps.py  security.py  storage.py
backend/app/models/: __init__.py  base.py  food.py  group.py  meal_plan.py  recipe.py  shopping.py  user.py
backend/app/schemas/: __init__.py  admin.py  analytics.py  auth.py  base.py  category.py  food.py  fridge.py  group.py  meal_plan.py  recipe.py  shopping.py  unit.py  user.py
backend/app/schemas/Admin/: __init__.py  admin.py
backend/app/schemas/Food/: __init__.py  food.py
backend/app/schemas/Fridge/: __init__.py  fridge.py
backend/app/schemas/MealPlan/: __init__.py  mealPlan.py
backend/app/schemas/Recipe/: __init__.py  recipe.py
backend/app/services/: auth.py  category.py  group.py  unit.py  user.py
backend/app/utils/: responseCodeEnums.py  resultCode.py
backend/app/workers/: __init__.py  celery_app.py  tasks.py
backend/tests/: test_category.py  test_health.py  test_unit.py
backend/tests/postman/: Test CRUD Unit-Category.postman_collection.json
backend/tests/pytest/: conftest.py  test_fridge.py  test_meal_plans.py  test_recipes.py  test_shopping.py
(+121 files in other folders)
